# PDFrAc

./: LICENSE  README.md  pyproject.toml
PDFrAc/: renamer.py
